# music_recognition

./: .gitignore  LICENSE  README.md  api.py  async_music.py  main.py  music.py  pyproject.toml  recognize.py  requirements-dev.txt  requirements.txt  test_music.py
.github/workflows/: python-package.yml
src/models/: models.py
src/music_recognition/: __init__.py  analyzer.py  cache.py  cli.py  core.py  watcher.py
tests/: test_core.py
