[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-recognition"
version = "1.0.0"
description = "Identify unknown music files using Shazam, write ID3 tags, rename and organize"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "formeo", email = "formeo@example.com"}
]
keywords = [
    "music",
    "recognition", 
    "shazam",
    "id3",
    "tags",
    "mp3",
    "audio",
    "fingerprinting",
    "organize",
    "rename",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
requires-python = ">=3.9"
dependencies = [
    "shazamio>=0.6.0",
    "mutagen>=1.47.0",
    "pydub>=0.25.1",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
music-recognize = "music_recognition.cli:main"

[project.urls]
Homepage = "https://github.com/formeo/music_recognition"
Documentation = "https://github.com/formeo/music_recognition#readme"
Repository = "https://github.com/formeo/music_recognition"
Issues = "https://github.com/formeo/music_recognition/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
