[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music-recognition-tool"
version = "1.2.1"
description = "Identify music files using Shazam, write ID3 tags, rename and organize"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Roman Gordienko", email = "grlformeo@gmail.com" }
]
keywords = ["music", "recognition", "shazam", "id3", "mp3", "tags"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
requires-python = ">=3.10"
dependencies = [
    "shazamio>=0.7.0",
    "mutagen>=1.47.0",
    "pydub>=0.25.1",
]

[project.optional-dependencies]
watch = ["watchdog>=4.0.0"]
analyze = ["librosa>=0.10.0", "numpy>=1.24.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
music-recognize = "music_recognition.cli:main"

[project.urls]
Homepage = "https://github.com/formeo/music_recognition"
Repository = "https://github.com/formeo/music_recognition"
Issues = "https://github.com/formeo/music_recognition/issues"
Changelog = "https://github.com/formeo/music_recognition/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/music_recognition"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]